# wabench

./: .gitignore  Cargo.toml  Makefile  README.md
container/: Dockerfile  build.sh  nginx.conf  rebuild-wasiworker.sh
crates/wasi-worker/: Cargo.toml  rollup.config.js
crates/wasibench/: .gitignore  Cargo.toml
crates/wasibench/static/: index.html
crates/wasm_bindgen/: Cargo.toml  package.json
crates/web/: Cargo.toml  README.md
crates/web/src/: app.rs  data.rs  data_views.rs  lib.rs  location.rs  runner.rs  runners.rs
crates/web/src/data/: mod.rs  views.rs
crates/web/static/: index.html  style.css
playground/stdweb/: Cargo.toml  README.md
playground/wasibench/: .gitignore  Cargo.toml  package-lock.json  package.json  rollup.config.js
playground/wasibench/src/: lib.rs
playground/wasibench/src/js/: worker.ts
playground/wasm_bindgen/: .gitignore  package-lock.json  package.json
playground/wasm_bindgen/src/: lib.rs
poll_oneoff_test/: Cargo.toml
poll_oneoff_test/src/: main.rs
src/: lib.rs  main.rs  ndarray_mul.rs  ndarray_sum.rs  ndarray_test.rs  tests.rs  wasmtest.rs
stdweb/: Cargo.toml  README.md
stdweb/src/: lib.rs  runner.rs
stdweb/static/: bin
wasi-worker/: Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
wasi-worker/src/js/: fs.ts  stdin.ts  worker.ts
wasm_bindgen/: Cargo.toml  README.md  main.js
wasm_bindgen/src/: app.rs  lib.rs  runner.rs
web/: Cargo.toml  webpack.config.js
web/src/: app.rs  lib.rs  main.rs  runner.rs  wasi_agent.rs
web/static/: index.html
