[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench"
version = "0.1.0"

[workspace]
members = ["crates/*"]

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
# yew = { path = "../../../opensource/yew" }
yew = { git = "https://github.com/yewstack/yew" }
wasi-worker-yew = { path="../wasi-worker/crates/wasi-worker-yew" }

[target.wasm32-unknown-unknown.dependencies.instant]
version = "0.1"
features = ["now", "stdweb"]

[target.wasm32-unknown-unknown.dependencies.rand]
version = "0.7"
features = ["stdweb"]
