[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench"
version = "0.1.0"

[workspace]
members = ["crates/*", "playground/wasibench"]

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
#wasi-worker-yew = { path="../wasi-worker/crates/wasi-worker-yew" }

[target.'cfg(cargo_web)'.dependencies]
instant = { version = "0.1", features = ["now", "stdweb"] }
rand = { version = "0.7", features = ["stdweb"] }
