[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-app-wbg"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
web_logger = "0.2"
yew = "0.9.0"
wasm-bindgen = "=0.2.42"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.wabench]
path = ".."

[dependencies.wabench-web]
path = "../web"

[dependencies.instant]
version = "0.1"
features = [ "wasm-bindgen" ]

[dependencies.rand]
version="0.7"
features = [ "wasm-bindgen" ]