[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-web"
version = "0.1.0"

[features]
threaded = []

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
yew = "0.9.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.wabench]
path = ".."
