[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-web"
version = "0.1.0"

[features]
threaded = []

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
stdweb = "0.4.20"

[dependencies.yew]
git = "https://github.com/dunnock/yew"
#path = "../../../opensource/yew"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.wabench]
path = ".."
