[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-web"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
threaded = []

[dependencies]
wasi = {version="0.7"}
log = "0.4"
web_logger = "0.2"

[dependencies.yew]
#git = "https://github.com/dunnock/yew"
path = "../../../opensource/yew"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.wabench]
path = ".."
