[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-web"
version = "0.1.0"

[features]
threaded = []

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "stdweb-worker"
path = "src/bin/stdweb-worker.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"


[dependencies]
wasi-worker-yew = { path = "../../../wasi-worker/crates/wasi-worker-yew" }
yew = "0.10"
log = "0.4"
web_logger = "0.2"
wabench = { path = "../..", version="0.1" }
wasi-worker = "0.3"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.instant]
version = "0.1"
features = [ "stdweb" ]

[dependencies.rand]
version="0.7"
features = [ "stdweb" ]


