[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-web"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "stdweb-worker"
path = "src/bin/stdweb-worker.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
wasi-worker-yew = "0.5"
yew = "0.11"
log = "0.4"
web_logger = "0.2"
wabench = { path = "../..", version="0.1" }

[dependencies.serde]
features = ["derive"]
version = "1.0"

