[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-app-wasi"
version = "0.2.0"

#[lib]
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
log = "0.4"
web_logger = "0.2"
yew = "0.10"
wasi-worker-yew = { version="0.3", path = "../../../wasi-worker/crates/wasi-worker-yew" }

[dependencies.wabench-web]
path = '../../crates/web'
