[package]
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
name = "wabench-app-wasi"
version = "0.2.0"

#[lib]
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
log = "0.4"
web_logger = "0.2"
yew = "0.11"
wasi-worker-yew = "0.5"

[dependencies.wabench-web]
path = '../../crates/web'
